--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,14 @@
 buildscript {
     
     repositories {
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         google()
         jcenter()
-        
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
-        
 
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.6.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,9 +18,10 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         google()
         jcenter()
-        
     }
 }
 
