--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url "https://www.jitpack.io" }
         google()
         jcenter()
     }
@@ -20,6 +21,7 @@ allprojects {
     repositories {
         maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url "https://www.jitpack.io" }
         google()
         jcenter()
     }
