--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         maven { url "https://www.jitpack.io" }
+        maven { url "https://jitpack.io" }
+        maven { url 'http://dl.bintray.com/gigamole/maven/' }
         google()
         jcenter()
     }
@@ -22,6 +24,8 @@ allprojects {
         maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
         maven { url "https://www.jitpack.io" }
+        maven { url "https://jitpack.io" }
+        maven { url 'http://dl.bintray.com/gigamole/maven/' }
         google()
         jcenter()
     }
